--- a/.github/workflows/render-opinion.yml
+++ b/.github/workflows/render-opinion.yml
@@ -2,7 +2,7 @@ name: Render Prothom Alo Opinion
 
 on:
   schedule:
-    - cron: "*/30 * * * *"   # Every 3 hours
+    - cron: "0 * * * *"   # Every 3 hours
   workflow_dispatch:         # Manual trigger
 
 jobs:
